samples/_failures_safe/1761419501_855ee6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_089c98a2.c: In function ‘main’:
./samples/SAFE/__tmp_089c98a2.c:164:12: error: missing terminating " character
  164 |     printf("\nOriginal data
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_089c98a2.c:164:5: error: expected expression at end of input
  164 |     printf("\nOriginal data
      |     ^~~~~~
./samples/SAFE/__tmp_089c98a2.c:164:5: error: expected declaration or statement at end of input
